--- a/feladat/helicopter/Makefile
+++ b/feladat/helicopter/Makefile
@@ -1,6 +1,6 @@
 all:
-	gcc -Iinclude/ src/callbacks.c src/camera.c src/init.c src/main.c src/scene.c src/utils.c -lopengl32 -lglu32 -lglut32 -lm -o helicopter.exe -Wall -Wextra -Wpedantic
+	gcc -Iinclude/ src/object.c src/obj/draw.c src/obj/info.c src/obj/load.c src/obj/model.c src/obj/transform.c src/callbacks.c src/camera.c src/init.c src/main.c src/scene.c src/utils.c -lopengl32 -lglu32 -lglut32 -lm -o helicopter.exe -Wall -Wextra -Wpedantic
 
 linux:
-	gcc -Iinclude/ src/callbacks.c src/camera.c src/init.c src/main.c src/scene.c src/utils.c -lGL -lGLU -lglut -lm -o helicopter.exe -Wall -Wextra -Wpedantic
+	gcc -Iinclude/ src/object.c src/obj/draw.c src/obj/info.c src/obj/load.c src/obj/model.c src/obj/transform.c src/callbacks.c src/camera.c src/init.c src/main.c src/scene.c src/utils.c -lGL -lGLU -lglut -lm -o helicopter.exe -Wall -Wextra -Wpedantic
 	
