--- a/feladat/.vscode/settings.json
+++ b/feladat/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+    "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
-        "cmath": "c"
+        "cmath": "c",
+        "math.h": "c"
     }
 }
